fix dropdown overlap and implement delete member

--- a/src/componentStyles/BubbleDropdown.css
+++ b/src/componentStyles/BubbleDropdown.css
@@ -20,10 +20,6 @@
 }
 
 @media only screen and (min-width: 840px) {
-  /* .colorBox {
-    font-size: 12px;
-  } */
-
   .dropContain {
     top: 38px;
     left: -1px;
